--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,44 +1,8 @@
 title: GLD Documentation
 remote_theme:  pmarsceill/just-the-docs
-description: Documentation for the Global Labor Database
-baseurl: "/gld" 
-url: "https://worldbank.github.io/gld" 
-
-
-
-# Enable or disable the site search
-# Supports true (default) or false
-search_enabled: true
-search:
-  # Split pages into sections that can be searched individually
-  # Supports 1 - 6, default: 2
-  heading_level: 2
-  # Maximum amount of previews per search result
-  # Default: 3
-  previews: 2
-  # Maximum amount of words to display before a matched word in the preview
-  # Default: 5
-  preview_words_before: 3
-  # Maximum amount of words to display after a matched word in the preview
-  # Default: 10
-  preview_words_after: 3
-  # Set the search token separator
-  # Default: /[\s\-/]+/
-  # Example: enable support for hyphenated search words
-  tokenizer_separator: /[\s/]+/
-  # Display the relative url in search results
-  # Supports true (default) or false
-  rel_url: true
-  # Enable or disable the search button that appears in the bottom right corner of every page
-  # Supports true or false (default)
-  button: false
-
-# Enable or disable heading anchors
-heading_anchors: true
-
-# Back to top link
-back_to_top: true
-back_to_top_text: "Back to top"
-
-# Footer content, appears at the bottom of every page's main content
-footer_content: "Created by the World Bank Jobs Group. Distributed by an <a href=\"https://github.com/worldbank/gld/blob/main/LICENSE\">MIT license.</a>"
+author: Yo mismo
+email: Correo@domain.com
+description: 
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
