--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,6 @@ description:
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+
+plugins:
+  - jekyll-seo-tag
