--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,4 +11,4 @@ description:
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Created by the World Bank Jobs Group. Distributed by an <a href=\"https://github.com/worldbank/gld/docs/tree/documentation_page/LICENSE.md\">MIT license.</a>"
+footer_content: "Created by the World Bank Jobs Group. Distributed by an <a href=\"https://github.com/worldbank/gld/blob/main/LICENSE\">MIT license.</a>"
