--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,10 +7,8 @@ description:
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-# Aux links for the upper right navigation
-aux_links:
-  "Just the Docs on GitHub":
-    - "//github.com/pmarsceill/just-the-docs"
+# Plugins
+plugins:
+  - jekyll-include-cache
 
-# Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
+remote_theme: "mmistakes/minimal-mistakes@4.23.0"
