--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,10 @@ title: Global Labor Database
 description: A Jekyll theme for documentation
 baseurl: /gld/ # the subpath of your site, e.g. /blog
 url: "https://worldbank.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-theme: "just-the-docs"
+# theme: "just-the-docs"
+remote_theme: pmarsceill/just-the-docs
+
+
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
