--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,8 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Global Labor Database
 description: A Jekyll theme for documentation
-baseurl: /docs # the subpath of your site, e.g. /blog
-url: "https://worldbank.github.io/gld" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/gld" # the subpath of your site, e.g. /blog
+url: "https://worldbank.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # theme: "just-the-docs"
 remote_theme: pmarsceill/just-the-docs
 
