Include .scss files

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@
 #Files to create custom layout and functionality
 # in dashboards, markdown notebooks, bookdown etc.
 !/**/*.css
+!/**/*.scss
 !/**/*.js
 
 #Bash scripts
