Allow .png files

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,9 @@
 !Gemfile.lock
 !node_modules
 
+# Allow .png for logos
+!/**/*.yaml
+
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
