--- a/.gitignore
+++ b/.gitignore
@@ -101,8 +101,9 @@
 !Gemfile.lock
 !node_modules
 
-# Allow .png for logos
+# Allow .png, .svg for logos
 !/**/*.png
+!/**/*.svg
 
 #######################
 # Include some additional file formats in any output folder. You might have
