--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,7 +34,7 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 # include: ["docs/tests/"]
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/images/wb_jobs_logo.png"
+logo: "/assets/images/WB_Jobs_logo_color.svg"
 
 # Enable or disable the site search
 # Supports true (default) or false
