--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,9 @@
 !/**/*.png
 !/**/*.svg
 
+# Allow PDFs for documentation under Country Survey Details
+!/Support/Country Survey Details/**/*.pdf
+
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
