--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@
 #######################
 # Start by ignoring everything, and below we are explicitly saying
 # what to not ignore
-**
+*
+
+#######################
+# First, whitelist anything that's a directory
+!*/
 
 #######################
 # List of files with GitHub functionality anywhere in the repo
@@ -42,12 +46,10 @@
 # CCC_YYYY_Survey/CCC_YYYY_Survey_Version_GLD/Programs. Hence we allow
 
 # Stata
-!GLD/**/Programs/*.do
-!GLD/**/[a-zA-Z][a-zA-Z][a-zA-Z]_[0-9][0-9][0-9][0-9]_[a-zA-Z0-9-]+_[vV][0-9][0-9]_M_[vV][0-9][0-9]_A_GLD_ALL.do
-!GLD/**/*.do
+!GLD/*/*/*/Programs/*.do
 
 # R
-!GLD/**/Programs/*.R
+!GLD/*/*/*/Programs/*.R
 
 
 #######################
@@ -96,13 +98,12 @@
 !docs/**/*.yml
 !docs/**/*.yaml
 
-# Other files for github pages
+#  Other files for github pages
 !docs/**/*.gem
 !.bundle
 !.ruby-version
 !.jekyll-cache
 !.sass-cache
 !_site
-!docs/Gemfile.lock
-!docs/Gemfile
+!Gemfile.lock
 !node_modules
