--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@
 ###  Section iii)    ###
 #######################
 
-# For the website, allow 
+# For the website, allow
 
 # Markdown files
 !docs/**/*.md
@@ -110,3 +110,15 @@
 !_site
 !Gemfile.lock
 !node_modules
+
+#######################
+###  Section iv)    ###
+#######################
+
+# For the issues form, allow
+
+# Markdown files
+!.github/**/*.md
+
+# YAML files
+!.github/**/*.yml
