Put in code examples multiline

--- a/.github/ISSUE_TEMPLATE/issue_form_correction.yml
+++ b/.github/ISSUE_TEMPLATE/issue_form_correction.yml
@@ -46,9 +46,19 @@ body:
       label: Relevant erroneus code
       description: Please copy the snippets with the relevant variable(s). Kindly copy with start and end tags.
       placeholder: |
-        blah 
-        blah
-        bleh
+        *<_educat7_>
+            gen byte educat7 =.
+            replace educat7 = 1 if inrange(general_ed,1,4)
+            replace educat7 = 2 if general_ed == 5
+            replace educat7 = 3 if general_ed == 6
+            replace educat7 = 4 if inrange(general_ed,7,8)
+            replace educat7 = 5 if general_ed == 10
+            replace educat7 = 6 if general_ed == 11
+            replace educat7 = 7 if inrange(general_ed,12,13)
+            label var educat7 "Level of education 1"
+            la de lbleducat7 1 "No education" 2 "Primary incomplete" 3 "Primary complete" 4 "Secondary incomplete" 5 "Secondary complete" 6 "Higher than secondary but not university" 7 "University incomplete or complete"
+            label values educat7 lbleducat7
+        *</_educat7_>
       render: shell
     validations:
       required: true
@@ -59,9 +69,19 @@ body:
       label: Udated code
       description: Please copy your proposal of how the variable(s) should be coded
       placeholder: |
-        blah 
-        blah
-        bleh
+        *<_educat7_>
+            gen byte educat7 =.
+            replace educat7 = 1 if inrange(general_ed,1,4)
+            replace educat7 = 2 if general_ed == 5
+            replace educat7 = 3 if general_ed == 6
+            replace educat7 = 4 if general_ed == 7
+            replace educat7 = 5 if inrange(general_ed,8,10)
+            replace educat7 = 6 if general_ed == 11
+            replace educat7 = 7 if inrange(general_ed,12,13)
+            label var educat7 "Level of education 1"
+            la de lbleducat7 1 "No education" 2 "Primary incomplete" 3 "Primary complete" 4 "Secondary incomplete" 5 "Secondary complete" 6 "Higher than secondary but not university" 7 "University incomplete or complete"
+            label values educat7 lbleducat7
+        *</_educat7_>
       render: shell
 
   - type: checkboxes
