--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@
 
 # YAML files
 !.github/**/*.yml
+Support/D - Q Checks/Survey series checks/process_time_series.R
+Support/D - Q Checks/Survey series checks/process_time_series.R
