--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,7 @@
 _build/
 
 # ignore the script structure file
-!docs/script_structure.md
-
+docs/script_structure.md
 
 #######################
 # We only want to publish three kinds of things:
