--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ html:
   use_edit_page_button: true
   use_repository_button: true
   use_issues_button: true
-  baseurl: https://worldbank.github.io/gld/
+  baseurl: https://worldbank.github.io/gld
   extra_footer: |
     <div>
         <b>All content (unless otherwise specified) is subject to the <a href="https://opensource.org/license/mit/">MIT License.</a></b>
