--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -4,33 +4,4 @@ root: README
 parts:
   - caption: Global Labor Database Manual
     chapters:
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Introduction.md
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Overview.md
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_Intro.md
-      sections:
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S2.md
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S3.md
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S4.md
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S5.md
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S6.md
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S7.md
-        - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S8.md
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_process.md
-      title: GLD Harmonization Process Overview
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_read_code.md
-      title: How to read the harmonization code
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Validation.md
-      sections:
-        - file: Support/D - Q Checks/Single survey checks/README.md
-        - file: Support/D - Q Checks/Survey series checks/Readme.md
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Use.md
-      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Expand.md
-  - caption: Contribution Guidelines
-    chapters:
-      - glob: docs/branch_management/*
-      - glob: docs/pull_request/*
-      - glob: docs/raise_issue/*
-      - glob: Support/E - Contribution Guidelines/*
-  - caption: Contact
-    chapters:
-      - file: docs/contact
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Introduction
