--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -5,3 +5,5 @@ parts:
   - caption: Global Labor Database Manual
     chapters:
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Introduction.md
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Overview.md
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_Intro.md
