--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -15,3 +15,5 @@ parts:
         - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S6.md
         - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S7.md
         - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S8.md
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_process.md
+
