--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -16,4 +16,19 @@ parts:
         - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S7.md
         - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_S8.md
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_process.md
-      title: GLD Harmonization Process Overview
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_read_code.md
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Validation.md
+      sections:
+        - file: Support/D - Q Checks/Single survey checks/README.md
+        - file: Support/D - Q Checks/Survey series checks/Readme.md
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Use.md
+      - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Expand.md
+  - caption: Contribution Guidelines
+    chapters:
+      - glob: docs/branch_management/*
+      - glob: docs/pull_request/*
+      - glob: docs/raise_issue/*
+      - glob: Support/E - Contribution Guidelines/*
+  - caption: Contact
+    chapters:
+      - file: docs/contact
