--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -18,3 +18,6 @@ parts:
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_process.md
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Harmonization_read_code.md
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Validation.md
+        sections:
+        - file: Support/D - Q Checks/Single survey checks/README.md
+        - file: Support/D - Q Checks/Survey series checks/Readme.md
