--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -23,3 +23,9 @@ parts:
         - file: Support/D - Q Checks/Survey series checks/Readme.md
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Use.md
       - file: Support/A - Guides and Documentation/GLD Manual/GLD_Manual_Expand.md
+  - caption: Contribution Guidelines
+    chapters:
+      - glob: docs/branch_management/*
+      - glob: docs/pull_request/*
+      - glob: docs/raise_issue/*
+      - glob: Support/E - Contribution Guidelines/*
